// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputPane matches snapshot 1`] = `
<div
  className="outputpane module-ok"
>
  <DelayedTableSwitcher
    deltaId={1}
    isReadOnly={false}
    key="table"
    loadRows={[MockFunction]}
    status="ok"
    stepId={987}
  />
</div>
`;

exports[`OutputPane renders when no module id 1`] = `
<div
  className="outputpane module-unreachable"
>
  <DelayedTableSwitcher
    columns={null}
    deltaId={null}
    isReadOnly={false}
    key="table"
    loadRows={[MockFunction]}
    nRows={null}
    status={null}
    stepId={null}
  />
</div>
`;
